# Aggregation-AIOgram-MongoDB

./: .env_example  README.md  pyproject.toml  requirements.txt
src/: aggregation.py  main.py  settings.py
src/data/: input_1.json  input_2.json  input_3.json  input_json.py
src/db/: __init__.py  client.py  dependencies.py
src/telegram_bot/: bot.py
src/telegram_bot/routers/: __init__.py  process_json.py  start.py
